--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,30 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo What is in this directory?
+          echo 1. What is in this directory?
           ls -a
           echo
-          echo Is Java installed?
+          echo 2. Is Java installed?
           java -version
-          echo Is Git installed?
+          echo 3. Is Git installed?
           git --version
-          echo What about build tools?
+          echo 4. What about build tools?
           mvn --version
           gradle --version
           ant -version
+          echo
+          echo 5. Where is Android SDK root?
+          echo $ANDROID_SDK_ROOT
+          echo
+          echo 6. Where are the Selenium jars?
+          echo $SELENIUM_JAR_PATH
+          echo
+          echo 7. What is the workspace location?
+          echo $RUNNER_WORKSPACE
+          echo
+          echo 8. Who is running this script?
+          whoami
+          echo 9. what is the disk laid out?
+          df
+          echo 10. what environment variables are available?
+          env
