--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,35 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: sh ./github-actions-script.sh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo 1. What is in this directory?
+          echo Nothing to see in multi-line script
+          echo Here is what is in the folder
           ls -a
-          echo
-          echo 2. Is Java installed?
-          java -version
-          echo 3. Is Git installed?
-          git --version
-          echo 4. What about build tools?
-          mvn --version
-          gradle --version
-          ant -version
-          echo
-          echo 5. Where is Android SDK root?
-          echo $ANDROID_SDK_ROOT
-          echo
-          echo 6. Where are the Selenium jars?
-          echo $SELENIUM_JAR_PATH
-          echo
-          echo 7. What is the workspace location?
-          echo $RUNNER_WORKSPACE
-          echo
-          echo 8. Who is running this script?
-          whoami
-          echo 9. what is the disk laid out?
-          df
-          echo 10. what environment variables are available?
-          env
