--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,48 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: sh ./github-actions-script.sh
+      # # Runs a single command using the runners shell
+      # - name: Run a one-line script
+      #   run: sh ./github-actions-script.sh
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # # Runs a set of commands using the runners shell
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Nothing to see in multi-line script
+      #     echo Here is what is in the folder
+      #     ls -a
+      - name: Step 1 - Log he pre-build disc space
+        run: df
+
+      - name: Step 2 - Checkout the main Github branch
+        uses: actions/checkout@v3
+
+      - name: Step 3 - Setup JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+      
+      - name: Step 4 - Build your Jakarta Web App using Maven
+        run: echo mvn -B package --file pom.xml
+
+      - name: Step 5 Build the native Android App
         run: |
-          echo Nothing to see in multi-line script
-          echo Here is what is in the folder
-          ls -a
+          echo Here is the ANDROID_SDK_ROOT
+          echo $ANDROID_SDK_ROOT
+
+      - name: Step 6 - Run your Selenium tests
+        run: |
+          echo the SELENIUM_JAR_PATH
+          echo $SELENIUM_JAR_PATH
+
+      - name: Step 7 - Logbuild tool versions
+        run: |
+          git --version
+          mvn --version
+          ant -version
+          gradle --version
+
+      - name: Step 8 - Log the post-build disc space
+        run: df
