--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-on-windows:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -35,6 +35,32 @@ jobs:
       #     echo Nothing to see in multi-line script
       #     echo Here is what is in the folder
       #     ls -a
+      - name: Step 1 - Log the pre-build disc space
+        run: ls
+
+      - name: Step 2 - Checkout the main Github branch
+        uses: actions/checkout@v3
+
+      - name: Step 3 - Setup JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      
+      - name: Step 4 - Build your Jakarta Web App using Maven
+        run: echo mvn -B package --file pom.xml
+
+      - name: Step 5 Check windows execution policy
+        run: |
+          echo Here is the Windows execution policy:
+          Get-ExecutionPolicy
+
+      - name: Step 6 - Log the post-build disc space
+        run: df
+
+  build-on-linux:
+    runs-on: ununtu-latest
+    steps:
       - name: Step 1 - Log he pre-build disc space
         run: df
 
