fixed name for runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         run: env
 
   build-on-linux:
-    runs-on: ununtu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Step 1 - Log he pre-build disc space
         run: df
