--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,10 @@ jobs:
 
       - name: Triggering GitHub workflow
         run: |
-          curl -L -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          curl -L \
+          -X POST \
           -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/srinikhiltumu1/getting-started-github-actions/actions/workflows/actions-artifact-example.yml/dispatches \
-          -d '{"ref":"main"}}'
+          -d '{"ref":"main"}'
